--- a/View/TabletView/AddTourPage.xaml
+++ b/View/TabletView/AddTourPage.xaml
@@ -36,7 +36,7 @@
 
         <Label Grid.Row="3" Grid.Column="0" Margin="40,0,20,0" Content="Date:" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="22"/>
         <DatePicker Grid.Row="3" Grid.Column="1" Margin="20,0,20,0"  Width="300" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="22" DataContext="{Binding tourDTO.DateOnly}"/>
-        
+
         <Label Grid.Row="4" Grid.Column="0" Margin="40,0,20,0" Content="Time:" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="22"/>
         <TextBox Grid.Row="4" Grid.Column="1" Margin="20,0,20,0" Width="300" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" Text="{Binding tourDTO.TimeOnly}"/>
 
@@ -51,18 +51,35 @@
             </StackPanel>
         </Button>
 
-        <Label Grid.RowSpan="2" Grid.Column="2" Margin="40,0,20,0" Content="Location:" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="22"/>
-        <ComboBox Grid.RowSpan="2" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="50,0,0,0" Width="200" ItemsSource="{Binding locationDTOs}" SelectedItem="{Binding selectedLocationDTO}"  DisplayMemberPath="LocationOptionTemplate"/>
+        <Label Grid.RowSpan="2" Grid.Column="2" Margin="40,20,20,0" Content="Location:" VerticalAlignment="Top" HorizontalAlignment="Right" FontSize="22"/>
+        <ComboBox Grid.RowSpan="2" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,30,0,0" Width="200" ItemsSource="{Binding locationDTOs}" SelectedItem="{Binding selectedLocationDTO}"  DisplayMemberPath="LocationOptionTemplate"/>
 
-        <Label Grid.Row="2" Grid.RowSpan="2" Grid.Column="2" Margin="40,0,20,0" Content="Language:" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="22"/>
-        <ComboBox Grid.Row="2" Grid.RowSpan="2" Grid.Column="3" SelectedIndex="0" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="50,0,0,0" Width="100" SelectedValuePath="Tag" ItemsSource="{Binding languageDTOs}" SelectedItem="{Binding selectedLanguageDTO}" DisplayMemberPath="LanguageOptionTemplate"/>
+        <Label Grid.Row="2" Grid.RowSpan="2" Grid.Column="2" Margin="40,20,20,0" Content="Language:" VerticalAlignment="Top" HorizontalAlignment="Right" FontSize="22"/>
+        <ComboBox Grid.Row="2" Grid.RowSpan="2" Grid.Column="3" SelectedIndex="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,30,0,0" Width="100" SelectedValuePath="Tag" ItemsSource="{Binding languageDTOs}" SelectedItem="{Binding selectedLanguageDTO}" DisplayMemberPath="LanguageOptionTemplate"/>
 
 
-        <Label Grid.Row="4"  Grid.Column="2" Margin="40,0,20,0" Content="Keypoints:" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="22"/>
-        <DataGrid  Grid.Row="5" Grid.RowSpan="2" Grid.Column="2" Grid.ColumnSpan="2"  Margin="50">
-            <TextBox TextWrapping="Wrap" AcceptsReturn="True" FontSize="20"/>
-
-        </DataGrid>
+        <Label Grid.Row="4"  Grid.Column="2" Margin="40,10,20,0" Content="Keypoints:" VerticalAlignment="Top" HorizontalAlignment="Right" FontSize="22"/>
+        <Grid Background="White" Grid.Row="4" Grid.RowSpan="3" Grid.Column="2" Grid.ColumnSpan="2"  Margin="10,50,10,10">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <DataGrid x:Name="dataGrid" ItemsSource="{Binding pointOfInterestDTOs}" IsReadOnly="True" 
+              SelectionMode="Single" AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="100"/>
+                    <DataGridTextColumn Header="Description" Binding="{Binding Description}" Width="250"/>
+                    <DataGridTemplateColumn>
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button x:Name="deletePointOfInterestButton" Content="Delete" Click="deletePointOfInterestButton_Click" Padding="10,0,10,0" Margin="5"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+            <Button x:Name="addPointOfInterestButton" Content="Add" Click="addPointOfInterestButton_Click" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5" Padding="10,0,10,0"/>
+        </Grid>
 
         <Button x:Name="resetButton" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Content="Reset" FontSize="30" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="30,10,30,10" Click="resetButton_Click"/>
         <Button x:Name="confirmButton" Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="2" Content="Confirm" FontSize="30" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="20,10,20,10" Click="confirmButton_Click"/>
