refac: Accommodation overall refactoring
-Refactoring in AccommodationDTO,AccommodationReservationDTO
-Refactoring in all AndroidView pages except SideMenu and SmallNotification

--- a/View/AndroidViews/AccommodationPage.xaml
+++ b/View/AndroidViews/AccommodationPage.xaml
@@ -34,7 +34,7 @@
         </Grid>
         <Border Grid.Row="1" BorderBrush="Black" BorderThickness="0,2,0,0">
             <ScrollViewer Height="500" Width="400" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalScrollBarVisibility="Hidden">
-                <ItemsControl Height="600" ItemsSource="{Binding accommodationDTOs}">
+                <ItemsControl Height="900" ItemsSource="{Binding AccommodationDTOs}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Border Background="#FFFCF5" BorderBrush="Black" BorderThickness="1" Height="110" CornerRadius="20">
