--- a/View/TabletView/AddPointsOfInterestWindow.xaml
+++ b/View/TabletView/AddPointsOfInterestWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookingApp.View.TabletView"
         mc:Ignorable="d"
-        Title="AddPointsOfInterestWindow" Height="350" Width="300">
+        Title="AddPointsOfInterestWindow" Height="350" Width="300" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -13,12 +13,17 @@
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Margin="20,5,20,5" Content="Name:" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="18"/>
-        <TextBox Grid.Row="0" Margin="100,5,20,5" FontSize="16" VerticalAlignment="Center" Text="{Binding pointOfInterestDTO.Name}"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Label Grid.Row="0" Grid.ColumnSpan="2" Margin="20,5,20,5" Content="Name:" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="18"/>
+        <TextBox Grid.Row="0" Grid.ColumnSpan="2" Margin="100,5,20,5" FontSize="16" VerticalAlignment="Center" Text="{Binding pointOfInterestDTO.Name}"/>
 
-        <Label Grid.Row="1" Margin="20,5,20,5" Content="Description:" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="18"/>
-        <TextBox TextWrapping="Wrap" AcceptsReturn="True" Grid.Row="2" Margin="20,10,20,10" FontSize="16" Text="{Binding pointOfInterestDTO.Description}"/>
+        <Label Grid.Row="1" Grid.ColumnSpan="2" Margin="20,5,20,5" Content="Description:" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="18"/>
+        <TextBox Grid.ColumnSpan="2" TextWrapping="Wrap" AcceptsReturn="True" Grid.Row="2" Margin="20,10,20,10" FontSize="16" Text="{Binding pointOfInterestDTO.Description}"/>
 
-        <Button x:Name="addButton" Content="Add" Click="addButton_Click" Margin="5" FontSize="18" Grid.Row="3"/>
+        <Button x:Name="addButton" Content="Add" Click="addButton_Click" Margin="20,5,20,5" FontSize="18" Grid.Row="3" Grid.Column="1"/>
+        <Button x:Name="cancelButton" Content="Cancel" Click="cancelButton_Click" Margin="20,5,20,5" FontSize="18" Grid.Row="3" Grid.Column="0"/>
     </Grid>
 </Window>
