--- a/View/TabletView/FollowLiveTourPage.xaml
+++ b/View/TabletView/FollowLiveTourPage.xaml
@@ -8,12 +8,46 @@
             d:DesignHeight="726" d:DesignWidth="1024"
       Title="FollowLiveTour">
 
+    
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Button x:Name="filterButton" Content="Filter" FontSize="22" HorizontalAlignment="Center" Padding="10" Margin="0,20,0,20"/>
+        <Border Grid.Row="0" Height="180" BorderBrush="DarkBlue" BorderThickness="1" Margin="5,20,5,5">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" Margin="40,0,20,0" Content="Name:" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="18"/>
+                <TextBox x:Name="textBoxName" Grid.Row="0" Grid.Column="1" Margin="20,0,20,0"  Width="200" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="16"/>
+
+                <Label Grid.Row="1" Grid.Column="0" Margin="40,0,20,0" Content="Number of tourists:" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="18"/>
+                <TextBox x:Name="textBoxTouristNumber" Grid.Row="1" Grid.Column="1" Margin="20,0,20,0"  Width="200" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="16"/>
+
+                <Label Grid.Row="2" Grid.Column="0" Margin="40,0,20,0" Content="Duration:" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="18"/>
+                <TextBox x:Name="textBoxDuration" Grid.Row="2" Grid.Column="1" Margin="20,0,20,0"  Width="200" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="16"/>
+
+                <Label Grid.Row="0" Grid.Column="2" Margin="40,0,20,0" Content="Location:" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="18"/>
+                <ComboBox x:Name="comboBoxLocation" Grid.Column="3" Grid.Row="0" Margin="20,0,20,0"  Width="200" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="16"
+           ItemsSource="{Binding locationDTOs}" SelectedItem="{Binding selectedLocationDTO}" DisplayMemberPath="LocationOptionTemplate"/>
+
+                <Label Grid.Row="1" Grid.Column="2" Margin="40,0,20,0" Content="Language:" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="18"/>
+                <ComboBox x:Name="comboBoxLanguage" Grid.Column="3" Grid.Row="1" Margin="20,0,20,0"  Width="200" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="16"
+          ItemsSource="{Binding languageDTOs}" SelectedItem="{Binding selectedLanguageDTO}" DisplayMemberPath="LanguageOptionTemplate"/>
+
+                <Button Grid.Column="2" Grid.Row="2" x:Name="clearButton" Content="Clear" Click="clearButton_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10" Padding="5" FontSize="20"/>
+                <Button Grid.Column="3" Grid.Row="2"  x:Name="filterButton" Content="Filter" Click="filterButton_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10" Padding="5" FontSize="20" IsEnabled="False"/>
+            </Grid>
+        </Border>
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
             <ItemsControl x:Name="itemsControlLiveTours" ItemsSource="{Binding tourDTOs}">
                 <ItemsControl.ItemTemplate>
